<resources>
    <string name="app_name">Rick and Morty</string>

    // Character Filter
    <string name="apply">APPLY</string>
    <string name="genderless">Genderless</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="unknown">Unknown</string>
    <string name="dead">Dead</string>
    <string name="alive">Alive</string>
    <string name="status">Status</string>
    <string name="give_a_name">Give a name</string>
    <string name="species">Species</string>
    <string name="select_one">Select one</string>
    <string name="name">Name</string>
</resources>
