<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CharacterFilterActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/characterName"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/give_a_name"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/characterName"/>

        <EditText
            android:id="@+id/etSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_one"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="14sp"
            android:textColor="@color/characterSpecie"/>

        <RadioGroup
            android:id="@+id/rgStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbStatusAlive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive"
                android:layout_marginVertical="9dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardCaracterBorder"/>
            <RadioButton
                android:id="@+id/rbStatusDead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead"
                android:layout_marginVertical="9dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardCaracterBorder"/>
            <RadioButton
                android:id="@+id/rbStatusUnknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:layout_marginVertical="9dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardCaracterBorder"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="14sp"
            android:textColor="@color/characterSpecie"
            android:layout_marginTop="15dp"/>

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rbGenderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginVertical="9dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardCaracterBorder"/>
            <RadioButton
                android:id="@+id/rbGenderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginVertical="9dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardCaracterBorder"/>
            <RadioButton
                android:id="@+id/rbGenderGenderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderless"
                android:layout_marginVertical="9dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardCaracterBorder"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/btApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_apply_filter"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:textColor="@color/ApplyButton"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>